# perindex-tool

./: .gitignore  README.md  pyproject.toml
data/characters/: grungaz.yaml  serana.yaml  thorn.json  thorn.yaml
src/perindex/: __init__.py  cli.py  core.py
