[project]
name = "perindex"
version = "0.1.0"
description = "An interactive character archive guided by Pergamond."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kahldin-m" }
]

dependencies = [
    "pyyaml",
    "rich",
]

[project.scripts]
perindex = "perindex.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
